# meson-cpputest

./: meson.build
src/: main.cpp  tags
subdirectories/: cpputest.wrap
subdirectories/cpputest/: meson.build
test/: test.cpp
